Halfly working authorization with Auth0

--- a/HeoresIIII/appsettings.json
+++ b/HeoresIIII/appsettings.json
@@ -1,8 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Auth0": {
+        "Domain": "heroes3-1.auth0.com",
+        "ClientId": "2WYw5pbrW_1Bmv7_VmG8SzvOdePUuBAh",
+        "ClientSecret": "6UllsI9tqO1-G4mBqq0VaYvOsQ8u6YdDGJGSKSJPqK3SH9S-DGsrbB-wWc-u6ur5",
+        "CallbackUrl": "http://localhost:44379/signin-auth0"
     }
-  },
-  "AllowedHosts": "*"
 }
